--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 ### Custom
 *.idea/inspectionProfiles
 .idea/
-!lib/*
 
 ### Java template
 # Compiled class file
@@ -24,14 +23,12 @@
 *.zip
 *.tar.gz
 *.rar
+!lib/engine.jar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
 
-### JetBrains template
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
 .idea/**/workspace.xml
@@ -145,7 +142,6 @@ gradle-app.setting
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
