--- a/.gitignore
+++ b/.gitignore
@@ -95,7 +95,7 @@ fabric.properties
 ### Gradle template
 .gradle
 **/build/
-!src/**/build/
+!api/src/**/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
